package contract

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/mock"
	"github.com/stretchr/testify/suite"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	"github.com/yhonda-ohishi/etc_meisai/src/models"
	"github.com/yhonda-ohishi/etc_meisai/src/services"
	pb "github.com/yhonda-ohishi/etc_meisai/src/pb"
)

// ETCMeisaiServiceContractSuite defines contract tests for ETCMeisaiService
// These tests verify that any implementation of ETCMeisaiServiceInterface meets
// the expected behavioral contract for gRPC service compatibility
type ETCMeisaiServiceContractSuite struct {
	suite.Suite
	service *services.ETCMeisaiService
}

// TestETCMeisaiServiceContract runs the contract test suite
func TestETCMeisaiServiceContract(t *testing.T) {
	suite.Run(t, new(ETCMeisaiServiceContractSuite))
}

// SetupTest initializes test data before each test
func (suite *ETCMeisaiServiceContractSuite) SetupTest() {
	// Mock service will be injected by actual implementation tests
	suite.service = nil // Will be set by actual tests
}

// TestCreateRecordContract verifies CreateRecord method contract
func (suite *ETCMeisaiServiceContractSuite) TestCreateRecordContract() {
	suite.T().Skip("Contract test disabled - requires service interface")
	validDate := time.Date(2024, 9, 26, 0, 0, 0, 0, time.UTC)

	tests := []struct {
		name          string
		params        *services.CreateRecordParams
		expectedError error
		description   string
	}{
		{
			name: "valid_record_creation",
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "14:30:00",
				EntranceIC:    "東京IC",
				ExitIC:        "大阪IC",
				TollAmount:    1200,
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
				ETCNum:        func() *string { s := "ETC001"; return &s }(),
				DtakoRowID:    func() *int64 { v := int64(789); return &v }(),
			},
			expectedError: nil,
			description:   "Should successfully create valid ETC record",
		},
		{
			name: "nil_params_validation",
			params: nil,
			expectedError: status.Error(codes.InvalidArgument, "params cannot be nil"),
			description: "Should return InvalidArgument error for nil params",
		},
		{
			name: "missing_required_fields",
			params: &services.CreateRecordParams{
				// Missing required fields: Date, Time, EntranceIC, ExitIC
				TollAmount:    1200,
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
			},
			expectedError: status.Error(codes.InvalidArgument, "missing required fields"),
			description: "Should validate required fields",
		},
		{
			name: "invalid_time_format",
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "2:30 PM", // Invalid format - should be HH:MM:SS
				EntranceIC:    "東京IC",
				ExitIC:        "大阪IC",
				TollAmount:    1200,
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
			},
			expectedError: status.Error(codes.InvalidArgument, "invalid time format"),
			description: "Should validate time format",
		},
		{
			name: "negative_toll_amount",
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "14:30:00",
				EntranceIC:    "東京IC",
				ExitIC:        "大阪IC",
				TollAmount:    -100, // Invalid: negative amount
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
			},
			expectedError: status.Error(codes.InvalidArgument, "toll amount must be non-negative"),
			description: "Should validate toll amount is non-negative",
		},
		{
			name: "empty_string_fields",
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "14:30:00",
				EntranceIC:    "", // Invalid: empty
				ExitIC:        "", // Invalid: empty
				TollAmount:    1200,
				CarNumber:     "", // Invalid: empty
				ETCCardNumber: "", // Invalid: empty
			},
			expectedError: status.Error(codes.InvalidArgument, "string fields cannot be empty"),
			description: "Should validate string fields are not empty",
		},
		{
			name: "zero_date_validation",
			params: &services.CreateRecordParams{
				Date:          time.Time{}, // Invalid: zero time
				Time:          "14:30:00",
				EntranceIC:    "東京IC",
				ExitIC:        "大阪IC",
				TollAmount:    1200,
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
			},
			expectedError: status.Error(codes.InvalidArgument, "date cannot be zero"),
			description: "Should validate date is not zero",
		},
		{
			name: "duplicate_record_conflict",
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "14:30:00",
				EntranceIC:    "東京IC",
				ExitIC:        "大阪IC",
				TollAmount:    1200,
				CarNumber:     "品川123あ4567", // Assume this exact record already exists
				ETCCardNumber: "1234567890123456",
			},
			expectedError: status.Error(codes.AlreadyExists, "record with same hash already exists"),
			description: "Should prevent duplicate record creation",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			ctx := context.Background()
			result, err := suite.service.CreateRecord(ctx, tt.params)

			if tt.expectedError != nil {
				suite.Error(err, tt.description)
				suite.Equal(tt.expectedError.Error(), err.Error())
				suite.Nil(result, "Result should be nil on error")
			} else {
				suite.NoError(err, tt.description)
				suite.NotNil(result, "Should return valid record")
				suite.Equal(tt.params.EntranceIC, result.EntranceIC)
				suite.Equal(tt.params.ExitIC, result.ExitIC)
				suite.Equal(tt.params.TollAmount, result.TollAmount)
				suite.Equal(tt.params.CarNumber, result.CarNumber)
				suite.Equal(tt.params.ETCCardNumber, result.ETCCardNumber)
			}
		})
	}
}

// TestGetRecordContract verifies GetRecord method contract
func (suite *ETCMeisaiServiceContractSuite) TestGetRecordContract() {
	suite.T().Skip("Contract test disabled - requires service interface")
	tests := []struct {
		name          string
		id            int64
		expectedError error
		expectResult  bool
		description   string
	}{
		{
			name:          "existing_record_retrieval",
			id:            1,
			expectedError: nil,
			expectResult:  true,
			description:   "Should successfully retrieve existing record",
		},
		{
			name:          "non_existent_record",
			id:            999999,
			expectedError: status.Error(codes.NotFound, "record not found"),
			expectResult:  false,
			description:   "Should return NotFound for non-existent record",
		},
		{
			name:          "invalid_id_zero",
			id:            0,
			expectedError: status.Error(codes.InvalidArgument, "id must be positive"),
			expectResult:  false,
			description:   "Should validate positive ID",
		},
		{
			name:          "invalid_id_negative",
			id:            -1,
			expectedError: status.Error(codes.InvalidArgument, "id must be positive"),
			expectResult:  false,
			description:   "Should reject negative IDs",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			ctx := context.Background()
			result, err := suite.service.GetRecord(ctx, tt.id)

			if tt.expectedError != nil {
				suite.Error(err, tt.description)
				suite.Equal(tt.expectedError.Error(), err.Error())
				suite.Nil(result, "Result should be nil on error")
			} else {
				suite.NoError(err, tt.description)
				if tt.expectResult {
					suite.NotNil(result, "Should return valid record")
					suite.Equal(tt.id, result.ID)
				}
			}
		})
	}
}

// TestListRecordsContract verifies ListRecords method contract
func (suite *ETCMeisaiServiceContractSuite) TestListRecordsContract() {
	suite.T().Skip("Contract test disabled - requires service interface")
	tests := []struct {
		name          string
		params        *services.ListRecordsParams
		expectedError error
		description   string
	}{
		{
			name: "valid_list_request",
			params: &services.ListRecordsParams{
				Page:     1,
				PageSize: 10,
				SortBy:   "date",
				SortOrder: "desc",
			},
			expectedError: nil,
			description:   "Should handle valid list request",
		},
		{
			name: "nil_params_validation",
			params: nil,
			expectedError: status.Error(codes.InvalidArgument, "params cannot be nil"),
			description: "Should return InvalidArgument error for nil params",
		},
		{
			name: "pagination_validation",
			params: &services.ListRecordsParams{
				Page:     0, // Invalid: should be >= 1
				PageSize: 10,
			},
			expectedError: status.Error(codes.InvalidArgument, "page must be >= 1"),
			description:   "Should validate page number",
		},
		{
			name: "page_size_validation",
			params: &services.ListRecordsParams{
				Page:     1,
				PageSize: 0, // Invalid: should be > 0
			},
			expectedError: status.Error(codes.InvalidArgument, "page_size must be > 0"),
			description:   "Should validate page size",
		},
		{
			name: "max_page_size_validation",
			params: &services.ListRecordsParams{
				Page:     1,
				PageSize: 1001, // Invalid: exceeds maximum
			},
			expectedError: status.Error(codes.InvalidArgument, "page_size exceeds maximum of 1000"),
			description:   "Should enforce maximum page size",
		},
		{
			name: "invalid_sort_field",
			params: &services.ListRecordsParams{
				Page:     1,
				PageSize: 10,
				SortBy:   "invalid_field",
			},
			expectedError: status.Error(codes.InvalidArgument, "invalid sort field"),
			description:   "Should validate sort field",
		},
		{
			name: "invalid_date_range",
			params: &services.ListRecordsParams{
				Page:     1,
				PageSize: 10,
				DateFrom: func() *time.Time { t, _ := time.Parse("2006-01-02", "2024-12-31"); return &t }(),
				DateTo:   func() *time.Time { t, _ := time.Parse("2006-01-02", "2024-01-01"); return &t }(),
				// DateFrom > DateTo - invalid range
			},
			expectedError: status.Error(codes.InvalidArgument, "invalid date range"),
			description:   "Should validate date range",
		},
		{
			name: "valid_filters",
			params: &services.ListRecordsParams{
				Page:     1,
				PageSize: 50,
				DateFrom: func() *time.Time { t, _ := time.Parse("2006-01-02", "2024-01-01"); return &t }(),
				DateTo:   func() *time.Time { t, _ := time.Parse("2006-01-02", "2024-12-31"); return &t }(),
				CarNumber: func() *string { s := "品川123"; return &s }(),
				ETCNumber: func() *string { s := "1234567890123456"; return &s }(),
				ETCNum:    func() *string { s := "ETC001"; return &s }(),
				SortBy:    "toll_amount",
				SortOrder: "asc",
			},
			expectedError: nil,
			description:   "Should handle complex filter combinations",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			ctx := context.Background()
			result, err := suite.service.ListRecords(ctx, tt.params)

			if tt.expectedError != nil {
				suite.Error(err, tt.description)
				suite.Equal(tt.expectedError.Error(), err.Error())
				suite.Nil(result, "Result should be nil on error")
			} else {
				suite.NoError(err, tt.description)
				suite.NotNil(result, "Should return records slice")
			}
		})
	}
}

// TestUpdateRecordContract verifies UpdateRecord method contract
func (suite *ETCMeisaiServiceContractSuite) TestUpdateRecordContract() {
	suite.T().Skip("Contract test disabled - requires service interface")
	validDate := time.Date(2024, 9, 26, 0, 0, 0, 0, time.UTC)

	tests := []struct {
		name          string
		id            int64
		params        *services.CreateRecordParams
		expectedError error
		description   string
	}{
		{
			name: "valid_record_update",
			id:   1,
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "15:30:00",
				EntranceIC:    "新宿IC",
				ExitIC:        "渋谷IC",
				TollAmount:    800,
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
				ETCNum:        func() *string { s := "ETC002"; return &s }(),
			},
			expectedError: nil,
			description:   "Should successfully update existing record",
		},
		{
			name: "invalid_id_zero",
			id:   0,
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "15:30:00",
				EntranceIC:    "新宿IC",
				ExitIC:        "渋谷IC",
				TollAmount:    800,
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
			},
			expectedError: status.Error(codes.InvalidArgument, "id must be positive"),
			description:   "Should validate positive ID",
		},
		{
			name: "invalid_id_negative",
			id:   -1,
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "15:30:00",
				EntranceIC:    "新宿IC",
				ExitIC:        "渋谷IC",
				TollAmount:    800,
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
			},
			expectedError: status.Error(codes.InvalidArgument, "id must be positive"),
			description:   "Should reject negative IDs",
		},
		{
			name:          "nil_params_validation",
			id:            1,
			params:        nil,
			expectedError: status.Error(codes.InvalidArgument, "params cannot be nil"),
			description:   "Should return InvalidArgument error for nil params",
		},
		{
			name: "non_existent_record",
			id:   999999,
			params: &services.CreateRecordParams{
				Date:          validDate,
				Time:          "15:30:00",
				EntranceIC:    "新宿IC",
				ExitIC:        "渋谷IC",
				TollAmount:    800,
				CarNumber:     "品川123あ4567",
				ETCCardNumber: "1234567890123456",
			},
			expectedError: status.Error(codes.NotFound, "record not found"),
			description:   "Should return NotFound for non-existent record",
		},
		{
			name: "invalid_update_data",
			id:   1,
			params: &services.CreateRecordParams{
				Date:          time.Time{}, // Invalid: zero time
				Time:          "invalid_time",
				EntranceIC:    "",
				ExitIC:        "",
				TollAmount:    -100,
				CarNumber:     "",
				ETCCardNumber: "",
			},
			expectedError: status.Error(codes.InvalidArgument, "invalid update data"),
			description:   "Should validate update data",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			ctx := context.Background()
			result, err := suite.service.UpdateRecord(ctx, tt.id, tt.params)

			if tt.expectedError != nil {
				suite.Error(err, tt.description)
				suite.Equal(tt.expectedError.Error(), err.Error())
				suite.Nil(result, "Result should be nil on error")
			} else {
				suite.NoError(err, tt.description)
				suite.NotNil(result, "Should return updated record")
				suite.Equal(tt.id, result.ID)
			}
		})
	}
}

// TestDeleteRecordContract verifies DeleteRecord method contract
func (suite *ETCMeisaiServiceContractSuite) TestDeleteRecordContract() {
	suite.T().Skip("Contract test disabled - requires service interface")
	tests := []struct {
		name          string
		id            int64
		expectedError error
		description   string
	}{
		{
			name:          "existing_record_deletion",
			id:            1,
			expectedError: nil,
			description:   "Should successfully delete existing record",
		},
		{
			name:          "non_existent_record",
			id:            999999,
			expectedError: status.Error(codes.NotFound, "record not found"),
			description:   "Should return NotFound for non-existent record",
		},
		{
			name:          "invalid_id_zero",
			id:            0,
			expectedError: status.Error(codes.InvalidArgument, "id must be positive"),
			description:   "Should validate positive ID",
		},
		{
			name:          "invalid_id_negative",
			id:            -1,
			expectedError: status.Error(codes.InvalidArgument, "id must be positive"),
			description:   "Should reject negative IDs",
		},
		{
			name:          "record_with_mappings",
			id:            2, // Assume this record has active mappings
			expectedError: status.Error(codes.FailedPrecondition, "cannot delete record with active mappings"),
			description:   "Should prevent deletion of records with active mappings",
		},
	}

	for _, tt := range tests {
		suite.Run(tt.name, func() {
			ctx := context.Background()
			err := suite.service.DeleteRecord(ctx, tt.id)

			if tt.expectedError != nil {
				suite.Error(err, tt.description)
				suite.Equal(tt.expectedError.Error(), err.Error())
			} else {
				suite.NoError(err, tt.description)
			}
		})
	}
}

// MockETCMeisaiService provides mock implementation for contract testing
type MockETCMeisaiService struct {
	mock.Mock
}

func (m *MockETCMeisaiService) CreateRecord(ctx context.Context, params *services.CreateRecordParams) (*models.ETCMeisaiRecord, error) {
	args := m.Called(ctx, params)
	return args.Get(0).(*models.ETCMeisaiRecord), args.Error(1)
}

func (m *MockETCMeisaiService) GetRecord(ctx context.Context, id int64) (*models.ETCMeisaiRecord, error) {
	args := m.Called(ctx, id)
	return args.Get(0).(*models.ETCMeisaiRecord), args.Error(1)
}

func (m *MockETCMeisaiService) ListRecords(ctx context.Context, params *services.ListRecordsParams) ([]*models.ETCMeisaiRecord, error) {
	args := m.Called(ctx, params)
	return args.Get(0).([]*models.ETCMeisaiRecord), args.Error(1)
}

func (m *MockETCMeisaiService) UpdateRecord(ctx context.Context, id int64, params *services.CreateRecordParams) (*models.ETCMeisaiRecord, error) {
	args := m.Called(ctx, id, params)
	return args.Get(0).(*models.ETCMeisaiRecord), args.Error(1)
}

func (m *MockETCMeisaiService) DeleteRecord(ctx context.Context, id int64) error {
	args := m.Called(ctx, id)
	return args.Error(0)
}

// TestProtocolBufferCompatibility verifies gRPC message compatibility
func (suite *ETCMeisaiServiceContractSuite) TestProtocolBufferCompatibility() {
	// Test CreateRecordParams to Protocol Buffer conversion
	validDate := time.Date(2024, 9, 26, 14, 30, 0, 0, time.UTC)
	createParams := &services.CreateRecordParams{
		Date:          validDate,
		Time:          "14:30:00",
		EntranceIC:    "東京IC",
		ExitIC:        "大阪IC",
		TollAmount:    1200,
		CarNumber:     "品川123あ4567",
		ETCCardNumber: "1234567890123456",
		ETCNum:        func() *string { s := "ETC001"; return &s }(),
		DtakoRowID:    func() *int64 { v := int64(789); return &v }(),
	}

	pbCreateRecord := &pb.ETCMeisaiRecord{
		Date:          validDate.Format("2006-01-02"),
		Time:          createParams.Time,
		EntranceIc:    createParams.EntranceIC,
		ExitIc:        createParams.ExitIC,
		TollAmount:    int32(createParams.TollAmount),
		CarNumber:     createParams.CarNumber,
		EtcCardNumber: createParams.ETCCardNumber,
		EtcNum:        createParams.ETCNum,
		DtakoRowId:    createParams.DtakoRowID,
	}

	suite.NotNil(pbCreateRecord, "CreateRecord conversion should succeed")
	suite.Equal(validDate.Format("2006-01-02"), pbCreateRecord.Date)
	suite.Equal(createParams.Time, pbCreateRecord.Time)
	suite.Equal(createParams.EntranceIC, pbCreateRecord.EntranceIc)
	suite.Equal(createParams.ExitIC, pbCreateRecord.ExitIc)
	suite.Equal(int32(createParams.TollAmount), pbCreateRecord.TollAmount)
	suite.Equal(createParams.CarNumber, pbCreateRecord.CarNumber)
	suite.Equal(createParams.ETCCardNumber, pbCreateRecord.EtcCardNumber)
	suite.Equal(createParams.ETCNum, pbCreateRecord.EtcNum)
	suite.Equal(createParams.DtakoRowID, pbCreateRecord.DtakoRowId)

	// Test ListRecordsParams to Protocol Buffer conversion
	listParams := &services.ListRecordsParams{
		Page:      1,
		PageSize:  10,
		DateFrom:  func() *time.Time { t, _ := time.Parse("2006-01-02", "2024-01-01"); return &t }(),
		DateTo:    func() *time.Time { t, _ := time.Parse("2006-01-02", "2024-12-31"); return &t }(),
		CarNumber: func() *string { s := "品川123"; return &s }(),
		ETCNumber: func() *string { s := "1234567890123456"; return &s }(),
		ETCNum:    func() *string { s := "ETC001"; return &s }(),
		SortBy:    "date",
		SortOrder: "desc",
	}

	pbListRequest := &pb.ListRecordsRequest{
		Page:          int32(listParams.Page),
		PageSize:      int32(listParams.PageSize),
		DateFrom:      func() *string { s := listParams.DateFrom.Format("2006-01-02"); return &s }(),
		DateTo:        func() *string { s := listParams.DateTo.Format("2006-01-02"); return &s }(),
		CarNumber:     listParams.CarNumber,
		EtcCardNumber: listParams.ETCNumber,
		SortBy:        listParams.SortBy,
		SortOrder:     pb.SortOrder_SORT_ORDER_DESC,
	}

	suite.NotNil(pbListRequest, "ListRecords conversion should succeed")
	suite.Equal(int32(listParams.Page), pbListRequest.Page)
	suite.Equal(int32(listParams.PageSize), pbListRequest.PageSize)
	suite.Equal(listParams.CarNumber, pbListRequest.CarNumber)
	suite.Equal(listParams.ETCNumber, pbListRequest.EtcCardNumber)
	suite.Equal(listParams.SortBy, pbListRequest.SortBy)

	// Verify date format conversion
	suite.Equal(listParams.DateFrom.Format("2006-01-02"), *pbListRequest.DateFrom)
	suite.Equal(listParams.DateTo.Format("2006-01-02"), *pbListRequest.DateTo)

	// Test time format validation
	timeTests := []struct {
		input    string
		expected bool
	}{
		{"14:30:00", true},   // Valid format
		{"09:15:30", true},   // Valid format
		{"23:59:59", true},   // Valid format
		{"2:30 PM", false},   // Invalid format
		{"14:30", false},     // Missing seconds
		{"25:00:00", false},  // Invalid hour
		{"14:60:00", false},  // Invalid minute
		{"14:30:60", false},  // Invalid second
	}

	for _, tt := range timeTests {
		suite.Run("time_format_"+tt.input, func() {
			// This would be validated in the actual service implementation
			// Here we just verify the test data structure is correct
			suite.Equal(tt.expected, len(tt.input) == 8 && tt.input[2] == ':' && tt.input[5] == ':')
		})
	}
}