package contract

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"

	"github.com/yhonda-ohishi/etc_meisai/src/models"
)

// TestExecutionContract tests verify that the application meets the defined contract specifications
// for test execution as defined in test-execution.yaml

func TestExecutionContract_ServiceContracts(t *testing.T) {
	// Skip test as in-memory repositories are not implemented
	t.Skip("In-memory repository implementation required for test execution contracts")

	// This test would require mock repositories or actual database setup
	// The current codebase uses gRPC-based repositories that connect to a database service
}

func TestExecutionContract_ValidationContracts(t *testing.T) {
	// Skip test as validation contracts require service setup
	t.Skip("Service setup required for validation contracts")
}

func TestExecutionContract_ErrorHandlingContracts(t *testing.T) {
	// Skip test as error handling contracts require service setup
	t.Skip("Service setup required for error handling contracts")
}

func TestExecutionContract_PerformanceContracts(t *testing.T) {
	// Skip test as performance contracts require full system setup
	t.Skip("Full system setup required for performance contracts")
}

func TestExecutionContract_ConcurrencyContracts(t *testing.T) {
	// Skip test as concurrency contracts require full system setup
	t.Skip("Full system setup required for concurrency contracts")
}

// TestModelStructure verifies the correct model structure is used
func TestModelStructure(t *testing.T) {
	// This test validates that the model structures compile correctly
	// It serves as documentation for the correct field names

	t.Run("ETCMeisai_Structure", func(t *testing.T) {
		// Correct ETCMeisai model structure
		model := &models.ETCMeisai{
			ID:        1,
			UseDate:   time.Date(2024, 1, 1, 0, 0, 0, 0, time.UTC),
			UseTime:   "10:30:00",
			EntryIC:   "入口IC",
			ExitIC:    "出口IC",
			Amount:    1500,
			CarNumber: "品川123あ1234",
			ETCNumber: "1234567890",
			Hash:      "test-hash",
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		}

		// Basic assertions to ensure fields exist
		assert.NotNil(t, model)
		assert.Equal(t, int64(1), model.ID)
		assert.Equal(t, "10:30:00", model.UseTime)
		assert.Equal(t, "入口IC", model.EntryIC)
		assert.Equal(t, "出口IC", model.ExitIC)
		assert.Equal(t, int32(1500), model.Amount)
		assert.Equal(t, "品川123あ1234", model.CarNumber)
	})

	t.Run("ETCMapping_Structure", func(t *testing.T) {
		// Correct ETCMapping model structure
		model := &models.ETCMapping{
			ID:               1,
			ETCRecordID:      100,
			MappingType:      "auto",
			MappedEntityID:   200,
			MappedEntityType: "dtako_record",
			Confidence:       0.95,
			Status:           "active",
			// Metadata:         "{}", // This field requires datatypes.JSON type
			CreatedBy:        "system",
			CreatedAt:        time.Now(),
			UpdatedAt:        time.Now(),
		}

		// Basic assertions to ensure fields exist
		assert.NotNil(t, model)
		assert.Equal(t, int64(1), model.ID)
		assert.Equal(t, int64(100), model.ETCRecordID)
		assert.Equal(t, "auto", model.MappingType)
		assert.Equal(t, float32(0.95), model.Confidence)
	})

	t.Run("ImportSession_Structure", func(t *testing.T) {
		// Correct ImportSession model structure
		model := &models.ImportSession{
			ID:              "session-123",
			AccountID:       "account-456",
			AccountIndex:    0,
			FileName:        "test.csv",
			FileSize:        1024,
			Status:          "completed",
			TotalRows:       100,
			ProcessedRows:   100,
			SuccessRows:     95,
			ErrorRows:       5,
			ProgressPercent: 100,
			// ErrorMessage:    "", // This is a *string field
			StartedAt:       time.Now(),
			// CompletedAt:     time.Now(), // This is a *time.Time field
			// UpdatedAt:       time.Now(), // This is a *time.Time field
		}

		// Basic assertions to ensure fields exist
		assert.NotNil(t, model)
		assert.Equal(t, "session-123", model.ID)
		assert.Equal(t, "account-456", model.AccountID)
		assert.Equal(t, int64(1024), model.FileSize)
		assert.Equal(t, 100, model.TotalRows)
	})
}

// TestExecutionContract_DataFlowContracts validates data flow through the system
func TestExecutionContract_DataFlowContracts(t *testing.T) {
	// Skip test as it requires full system setup
	t.Skip("Full system setup with database and gRPC services required")

	ctx := context.Background()
	_ = ctx

	// This would test:
	// 1. CSV Import → Parse → Save to DB
	// 2. DB Query → Transform → API Response
	// 3. Mapping Creation → Validation → Persistence
	// 4. Statistics Aggregation → Caching → Response
}

// TestExecutionContract_SecurityContracts validates security requirements
func TestExecutionContract_SecurityContracts(t *testing.T) {
	t.Run("Sensitive_Data_Masking", func(t *testing.T) {
		// Test that sensitive data is properly masked in logs/responses
		etcCardNumber := "1234567890123456"
		expectedMasked := "************3456"

		// This would test masking functions
		_ = etcCardNumber
		_ = expectedMasked

		// Skip actual test as it requires service implementation
		t.Skip("Masking service implementation required")
	})

	t.Run("Input_Validation", func(t *testing.T) {
		// Test that all inputs are properly validated
		// Skip actual test as it requires service implementation
		t.Skip("Validation service implementation required")
	})
}